Bug 7145 - fix build with gcc 2.95
Summary: fix build with gcc 2.95
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: 7.2 (2007.02)
Hardware: x86 (IA32) All
: high normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2006-06-07 01:45 UTC by Jens Granseuer
Modified: 2007-03-05 15:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
C89 fixes (patch against xorg-server 1.1.0) (1.53 KB, patch)
2006-06-07 01:46 UTC, Jens Granseuer
no flags Details | Splinter Review
patch for 7.2.99.901 (371 bytes, patch)
2007-03-05 09:56 UTC, Jens Granseuer
no flags Details | Splinter Review
real patch for 1.2.99.901 (1.34 KB, patch)
2007-03-05 10:07 UTC, Jens Granseuer
no flags Details | Splinter Review

Description Jens Granseuer 2006-06-07 01:45:06 UTC
The following patch fixes building with C89 compilers like gcc 2.
Comment 1 Jens Granseuer 2006-06-07 01:46:02 UTC
Created attachment 5833 [details] [review]
C89 fixes (patch against xorg-server 1.1.0)
Comment 2 Alan Coopersmith 2006-06-30 16:01:13 UTC
Thanks for the patch!   Fix checked into git:

 exa/exa.c                      |    5 ++++-
 hw/xfree86/common/xf86Config.c |    9 ++++++---
 2 files changed, 10 insertions(+), 4 deletions(-)

New commits:
diff-tree 179737d4a07ed10a734fe017b5680f8e78ffda96 (from
6bd4c254396cb0f4e8ae21ff455ebb15cd9f4f10)
Author: Jens Granseuer <jensgr@gmx.net>
Date:   Wed Jun 7 01:46:00 2006 -0700

    Bug 7145: fix build with gcc 2.95 & other c89 compilers
    
    Move variable declarations to start of blocks as required by c89
Comment 3 Jens Granseuer 2007-02-05 09:25:11 UTC
This same problem is still present in 1.2.0...
Comment 4 Daniel Stone 2007-02-27 01:32:26 UTC
Sorry about the phenomenal bug spam, guys.  Adding xorg-team@ to the QA contact so bugs don't get lost in future.
Comment 5 Jens Granseuer 2007-03-05 09:56:28 UTC
Created attachment 8986 [details] [review]
patch for 7.2.99.901

And here's an updated patch against 7.2RC1 which still exhibits the same issues and some shiny new ones.
Comment 6 Jens Granseuer 2007-03-05 10:07:38 UTC
Created attachment 8987 [details] [review]
real patch for 1.2.99.901

Gah, already getting all those patches mixed up. This is the correct one.
Comment 7 Alan Coopersmith 2007-03-05 15:34:01 UTC
Fix checked into git master for inclusion in xserver-1.4:

 GL/glx/glxcmdsswap.c |    4 ++--
 randr/rrcrtc.c       |    2 +-
 randr/rroutput.c     |    2 +-
 randr/rrpointer.c    |    2 +-
 4 files changed, 5 insertions(+), 5 deletions(-)

New commits:
diff-tree 689d52b6242434507a64a8fff27b01607628c393 (from fe7b8f4237874e3e45fe25a6bf06faddfa1ab8e1)
Author: Jens Granseuer <jensgr@gmx.net>
Date:   Mon Mar 5 15:31:44 2007 -0800

    Bugzilla #7145: fix build with gcc 2.95
    
    Bugzilla #7145: <http://bugs.freedesktop.org/show_bug.cgi?id=7145>
    Patch #8987: <http://bugs.freedesktop.org/attachment.cgi?id=8987>



Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.